--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 
@@ -39,4 +44,7 @@ dependencies {
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.1'
     compile files('libs/volley.jar')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+
+    compile 'com.firebase:firebase-client-android:2.4.0+'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
 }
