--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'maven'
 
 android {
     compileSdkVersion 23
@@ -27,13 +28,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.+'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
 
     compile 'com.android.support:recyclerview-v7:23.0.1'
-   // compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+
+    // compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     //compile 'com.github.vajro:MaterialDesignLibrary:1.6'
 
     compile 'info.hoang8f:android-segmented:1.0.5'
@@ -48,4 +50,8 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.4.0+'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile('com.quinny898.library.persistentsearch:library:1.1.0-SNAPSHOT') {
+        exclude group: 'com.nineoldandroids', module: 'library'
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
 }
