--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="moviez.mnf.com.movie" >
+    package="moviez.mnf.com.movie">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,10 +11,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,38 +23,48 @@
         </activity>
         <activity
             android:name=".Activity.MovieDetails"
-            android:label="@string/title_activity_movie_details" >
+            android:label="@string/title_activity_movie_details"
+            android:parentActivityName=".MainActivity">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="moviez.mnf.com.movie.MainActivity" />
         </activity>
         <activity
             android:name=".Activity.ReviewsActivity"
-            android:label="@string/title_activity_reviews" >
-        </activity>
+            android:label="@string/title_activity_reviews"></activity>
         <activity
             android:name=".Activity.ImageViewActivity"
-            android:label="@string/title_activity_image_view" >
-        </activity>
+            android:label="@string/title_activity_image_view"></activity>
         <activity
             android:name=".Activity.TestActivity"
-            android:label="@string/title_activity_test" >
-        </activity>
+            android:label="@string/title_activity_test"></activity>
         <activity
             android:name=".Activity.SearchActivity"
-            android:label="@string/title_activity_search" >
-        </activity>
+            android:label="@string/title_activity_search"></activity>
         <activity
             android:name=".Activity.TvDetailActivity"
-            android:label="@string/title_activity_tv_detail" >
+            android:label="@string/title_activity_tv_detail"
+            android:parentActivityName=".MainActivity">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="moviez.mnf.com.movie.MainActivity" />
         </activity>
         <activity
             android:name=".Activity.YouTubeActivity"
             android:label="@string/title_activity_you_tube"
-            android:theme="@style/Theme.AppCompat.Dialog" >
-        </activity>
+            android:theme="@style/Theme.AppCompat.Dialog"></activity>
         <activity
             android:name=".Activity.AuthenticationActivity"
             android:label="@string/title_activity_authentication"
-            android:theme="@style/AppTheme" >
-        </activity>
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".Activity.ScrollingActivity"
+            android:label="@string/title_activity_scrolling"
+            android:theme="@style/AppThemeCast"></activity>
     </application>
 
 </manifest>
