--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,10 @@ dependencies {
     compile files('libs/volley.jar')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'com.firebase:firebase-client-android:2.4.0+'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile('com.quinny898.library.persistentsearch:library:1.1.0-SNAPSHOT') {
         exclude group: 'com.nineoldandroids', module: 'library'
         exclude group: 'com.android.support', module: 'appcompat-v7'
